Правка багов из-за глючного парсера .ipynb github-ом

--- a/lesson1/lesson1_tasks.ipynb
+++ b/lesson1/lesson1_tasks.ipynb
@@ -30,7 +30,7 @@
       "source": [
         "## Задача 1\r\n",
         "\r\n",
-        "Даны два числа 355 и 113 вычислите [частное](https://ru.wikipedia.org/wiki/Деление_(математика)) этих чисел. Выведите на экран вычисленное значение."
+        "Даны два числа 355 и 113 вычислите <a href=\"https://ru.wikipedia.org/wiki/Деление_(математика)\">частное</a> этих чисел. Выведите на экран вычисленное значение."
       ]
     },
     {
@@ -73,7 +73,7 @@
       "source": [
         "## Задача 3\r\n",
         "\r\n",
-        "Вычислите [факториал](https://ru.wikipedia.org/wiki/Факториал) $20!​$. Выведите на экран вычисленное значение."
+        "Вычислите [факториал](https://ru.wikipedia.org/wiki/Факториал) ***20!***. Выведите на экран вычисленное значение."
       ]
     },
     {
