--- a/lesson4/lesson4_tasks.ipynb
+++ b/lesson4/lesson4_tasks.ipynb
@@ -161,6 +161,14 @@
         "у лукоморья дуб зелёный; златая цепь на дубе том: и днём и ночью кот учёный всё ходит по цепи кругом; идёт направо —  песнь заводит, налево — сказку говорит. там чудеса: там леший бродит, русалка на ветвях сидит; там на неведомых дорожках следы невиданных зверей; избушка там на курьих ножках стоит без окон, без дверей; там лес и дол видений полны; там о заре прихлынут волны на брег песчаный и пустой, и тридцать витязей прекрасных чредой из вод выходят ясных, и с ними дядька их морской; там королевич мимоходом пленяет грозного царя; там в облаках перед народом через леса, через моря колдун несёт богатыря; в темнице там царевна тужит, а бурый волк ей верно служит; там ступа с бабою ягой идёт, бредёт сама собой, там царь кащей над златом чахнет; там русский дух… там русью пахнет! и там я был, и мёд я пил; у моря видел дуб зелёный; под ним сидел, и кот учёный свои мне сказки говорил.\n",
         "```\n",
         "\n",
+        "Пример:\n",
+        "\n",
+        "| Буква | Количество |\n",
+        "| :-:   | :-:        |\n",
+        "| д | 35 |\n",
+        "| у | 24 |\n",
+        "| б | 16 |\n",
+        "\n",
         "<sup>\\*Нужно использовать циклы, функцию [len для списка](https://youtu.be/CEQZYZMPJSU), [индексацию списков](https://youtu.be/z8WWOnxUOb8), переменную для хранения промежуточного значения при подсчёте</sup>"
       ]
     },
@@ -192,6 +200,14 @@
         "Воспользовавшись принципом комплементарности выведите вторую (матричную) цепочку ДНК \n",
         "\n",
         "<img width=\"600px\" src=\"https://raw.githubusercontent.com/VladimirChabanov/python_basic/master/lesson4/img/TCGA.png\">\n",
+        "\n",
+        "Пример:\n",
+        "\n",
+        "| | |\n",
+        "| :-: | :-: |\n",
+        "| Дано | ATGGTGCATTTTACT |\n",
+        "| Вывод | TACCACGTAAAATGA |\n",
+        "\n",
         "\n",
         "<sup>\\*Нужно использовать функцию [range](https://youtu.be/9J0fvF4k4F4), функцию `len`, [индексирование строки](https://youtu.be/ITI2kJ6j8Ho) и оператор `if`</sup>"
       ]
